Author Flyout z-index issue
- Wasn't z-index'ed high enough for the Document page

--- a/web/nuremberg/core/static/style/base.less
+++ b/web/nuremberg/core/static/style/base.less
@@ -179,7 +179,7 @@ a.bypass-link {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 20px;
   border: 1px solid #aaa;
-  z-index: 10;
+  z-index: 1000;
 
   &[data-show] {
     display: block;
